# shearsort

./: CMakeLists.txt  README.md
src/: main.cpp  shearsort.cl  shearsort.cl.bk
